--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "dev": "ts-node-dev src/app.ts"
+    "dev": "ts-node-dev src/server.ts",
+    "start": "node dist/server.js"
   },
   "keywords": [],
   "author": "",
