--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/node": "^22.5.5",
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
+    "mongodb-memory-server": "^10.1.4",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "ts-node-dev": "^2.0.0",
